--- a/index.html
+++ b/index.html
@@ -6,16 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Webpage</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/7326a762aa.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="nav-bar">
         <div class="logo">Snapshot</div>
+        <input type="checkbox" name="check" id="check">
+        <label for="check" class="checkbtn">
+            <i class="fas fa-ellipsis-v"></i>
+        </label>
         <ul class="nav-links">
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Gallery</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
+        <label for="check" class="hidecheckbtn">
+            <i class="fas fa-window-close"></i>        
+        </label>
     </div>
 
     <!-- Hero section -->
